# oop_pract_3

./: README.md  oop_pract_3.code-workspace  pyproject.toml
examples/: Abstract_animal.py  Abstract_class.py  Abstract_figure.py  abstractpoperty.py
tasks/: liquid.py  task_1.py  task_2.py
tasks/body_package/: __init__.py  body.py
tests/: test_body.py  test_liquid.py
